# esp32-idf-aws-iot

./: .gitignore  README.md
aws-iot-examples/: README.md
aws-iot-examples/01_awsProvisioning/: CMakeLists.txt  Makefile  README.md  sdkconfig
aws-iot-examples/01_awsProvisioning/main/: app_config.h  app_main.c
aws-iot-examples/02_awsPubSub/: CMakeLists.txt  Makefile  README.md  sdkconfig
aws-iot-examples/02_awsPubSub/main/: CMakeLists.txt  app_config.h  app_main.c  component.mk
aws-iot-examples/03_awsShadowUpdate/: CMakeLists.txt  Makefile  README.md  sdkconfig
aws-iot-examples/03_awsShadowUpdate/main/: app_config.h  app_main.c  component.mk
aws-iot-examples/04_awsJobs/: CMakeLists.txt  Makefile  README.md
aws-iot-examples/04_awsJobs/main/: app_main.c
aws-iot-examples/05_awsOTA/: .gitignore  CMakeLists.txt  Makefile  README.md
aws-iot-examples/05_awsOTA/main/: app_config.h  app_main.c
aws-iot-examples/06_all/: CMakeLists.txt  Makefile  README.md  sdkconfig  sdkconfig_s3
aws-iot-examples/06_all/main/: CMakeLists.txt  app_config.h  app_main.c
aws-iot-examples/07_awsProvisioningUsingBLE/: CMakeLists.txt  Makefile  README.md
aws-iot-examples/07_awsProvisioningUsingBLE/main/: CMakeLists.txt  app_config.h  app_main.c
aws-iot-examples/08_wifiConfigUsingBLE/: CMakeLists.txt  Makefile
aws-iot-examples/08_wifiConfigUsingBLE/main/: CMakeLists.txt  app_config.h  app_main.c
aws-iot-examples/_Certificates/thingCerts/: Readme.txt
aws-iot-examples/ble_provision/: CMakeLists.txt  Makefile
aws-iot-examples/ble_provision/main/: CMakeLists.txt  app_config.h  app_main.c
bs_esp32_platform/: .gitignore  CMakeLists.txt
bs_esp32_platform/aws_lib/include/: aws_iot_config.h  aws_iot_error.h  aws_iot_log.h  aws_iot_mqtt_client.h  network_platform.h
bs_esp32_platform/lib/include/: lib_aws.h  lib_ble.h  lib_config.h  lib_delay.h  lib_flash.h  lib_gpio.h  lib_http.h  lib_jobs.h  lib_json.h  lib_menu.h  lib_msg.h  lib_ota.h  lib_print.h  lib_ringBuffer.h  lib_shadow.h  lib_system.h  lib_uart.h  lib_utils.h  lib_wifi.h
examples/01_ProvisionByClaim/: README.md  partitions_esp32s3.csv  sdkconfig  sdkconfig_s3
examples/01_ProvisionByClaim/main/: app_config.h  app_main.c
examples/02_ThingPubSub/: README.md
examples/02_ThingPubSub/main/: CMakeLists.txt  app_config.h  app_main.c
examples/03_Shadow/: README.md
examples/03_Shadow/main/: CMakeLists.txt  app_config.h  app_main.c
examples/04_Jobs/: README.md  blink_jobDocument.txt  partitions_s.csv
examples/04_Jobs/main/: CMakeLists.txt  app_config.h  app_main.c
examples/05_OTA/: README.md  ota_jobDocument.txt
examples/05_OTA/main/: app_config.h  app_main.c
examples/06_BleDeviceprovisioning/: README.md
examples/06_BleDeviceprovisioning/main/: CMakeLists.txt  app_config.h  app_main.c
examples/_Certificates/claimCerts/: README.md
examples/_Certificates/thingCerts/: README.md
examples/combined/: CMakeLists.txt  README.md  sdkconfig.esp32  sdkconfig.esp32s3
examples/combined/main/: CMakeLists.txt  app_config.h  app_main.c
